"""인증 도메인 모델 — 사용자 + 리프레시 토큰 + 소셜 계정 + 비밀번호 재설정."""
from __future__ import annotations

import uuid
from datetime import datetime, timezone

from sqlalchemy import (
    Boolean,
    Column,
    DateTime,
    ForeignKey,
    String,
    Text,
    UniqueConstraint,
)
from sqlalchemy.dialects.postgresql import UUID
from sqlalchemy.orm import relationship

from src.database import Base


def _utcnow() -> datetime:
    return datetime.now(timezone.utc)


class User(Base):
    __tablename__ = "users"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    # 로그인 아이디 — 이메일가입은 email 과 동일, SNS 가입은 제공자(카카오/네이버) 이메일.
    login_id = Column(String(255), nullable=False, unique=True, index=True)
    # 연락받을(인증) 이메일 — 수신 가능 여부만 검증하므로 중복 허용(unique 아님).
    email = Column(String(255), nullable=False, index=True)
    password = Column(String(255), nullable=True)
    name = Column(String(100), nullable=True)
    phone = Column(String(30), nullable=True, unique=True)
    role = Column(String(20), nullable=False, default="user")
    verified = Column(Boolean, nullable=False, default=False)
    verify_token = Column(String(255), nullable=True)
    # 회원(member) 운영 필드 — 설계서 §3.1
    membership_type = Column(String(20), nullable=False, default="individual")  # individual/corporate
    company_name = Column(String(200), nullable=True)
    position = Column(String(100), nullable=True)
    industry = Column(String(100), nullable=True)
    marketing_consent = Column(Boolean, nullable=False, default=False)
    status = Column(String(20), nullable=False, default="active")  # active/dormant/sanctioned/withdrawn
    admin_memo = Column(Text, nullable=True)
    withdrawn_at = Column(DateTime(timezone=True), nullable=True)
    created_at = Column(DateTime(timezone=True), default=_utcnow, nullable=False)
    updated_at = Column(DateTime(timezone=True), default=_utcnow, onupdate=_utcnow, nullable=False)

    refresh_tokens = relationship(
        "RefreshToken", back_populates="user", cascade="all, delete-orphan"
    )
    social_accounts = relationship(
        "SocialAccount", back_populates="user", cascade="all, delete-orphan"
    )
    password_resets = relationship(
        "PasswordReset", back_populates="user", cascade="all, delete-orphan"
    )
    business_registration = relationship(
        "BusinessRegistration",
        back_populates="user",
        uselist=False,
        cascade="all, delete-orphan",
    )
    sanctions = relationship(
        "MemberSanction", back_populates="user", cascade="all, delete-orphan"
    )
    proposals = relationship(
        "Proposal", back_populates="member", cascade="all, delete-orphan"
    )
    inquiries = relationship("Inquiry", back_populates="member")

    @property
    def sns_provider(self) -> str | None:
        """로그인에 사용된 소셜 제공자(kakao/naver). 이메일 가입은 None."""
        return self.social_accounts[0].provider if self.social_accounts else None


class RefreshToken(Base):
    __tablename__ = "refresh_tokens"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    token = Column(String(512), nullable=False, unique=True, index=True)
    user_id = Column(
        UUID(as_uuid=True), ForeignKey("users.id", ondelete="CASCADE"), nullable=False
    )
    expires_at = Column(DateTime(timezone=True), nullable=False)
    revoked = Column(Boolean, nullable=False, default=False)
    created_at = Column(DateTime(timezone=True), default=_utcnow, nullable=False)

    user = relationship("User", back_populates="refresh_tokens")


class SocialAccount(Base):
    __tablename__ = "social_accounts"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    provider = Column(String(20), nullable=False)
    provider_id = Column(String(255), nullable=False)
    user_id = Column(
        UUID(as_uuid=True), ForeignKey("users.id", ondelete="CASCADE"), nullable=False
    )
    access_token = Column(Text, nullable=True)
    refresh_token = Column(Text, nullable=True)
    expires_at = Column(DateTime(timezone=True), nullable=True)
    created_at = Column(DateTime(timezone=True), default=_utcnow, nullable=False)

    user = relationship("User", back_populates="social_accounts")

    __table_args__ = (
        UniqueConstraint("provider", "provider_id", name="uq_social_accounts_provider"),
    )


class EmailVerification(Base):
    """이메일 인증코드 — 회원가입/SNS 가입 시 수신 가능한 이메일 확인용.

    유저 생성 전에도 발급되므로 email 기준으로 관리(FK 없음).
    """
    __tablename__ = "email_verifications"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    email = Column(String(255), nullable=False, index=True)
    code = Column(String(10), nullable=False)
    expires_at = Column(DateTime(timezone=True), nullable=False)
    verified = Column(Boolean, nullable=False, default=False)
    created_at = Column(DateTime(timezone=True), default=_utcnow, nullable=False)


class PasswordReset(Base):
    __tablename__ = "password_resets"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    token = Column(String(255), nullable=False, unique=True, index=True)
    user_id = Column(
        UUID(as_uuid=True), ForeignKey("users.id", ondelete="CASCADE"), nullable=False
    )
    expires_at = Column(DateTime(timezone=True), nullable=False)
    used = Column(Boolean, nullable=False, default=False)
    created_at = Column(DateTime(timezone=True), default=_utcnow, nullable=False)

    user = relationship("User", back_populates="password_resets")
